--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=https://github.com/nobeam/b3-lattice-summaries/blob/results
+VITE_DATA_URL=https://nobeam.github.io/lattice-summaries-data
