--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
-# VITE_API_URL='http://localhost:8000'
-VITE_API_URL='results'
+# Uncomment to switch between local and online data (https://nobeam.github.io/lattice-summaries-data/)
+VITE_DATA_URL='results'
+# VITE_DATA_URL=https://nobeam.github.io/lattice-summaries-data
