--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "medium-zoom": "^1.0.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue": "^3.0.4",
     "vue-router": "^4.0.0-rc.6"
