--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "build": "vite build"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "medium-zoom": "^1.0.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue": "^3.0.4",
-    "vue-router": "^4.0.0-rc.6"
+    "vue-router": "^4.0.0-rc.6",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.13",
