--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "fuse.js": "^6.4.3",
     "medium-zoom": "^1.0.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "vue": "^3.0.4",
