--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "build": "vite build"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "fuse.js": "^6.4.3",
-    "medium-zoom": "^1.0.6",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
-    "vue": "^3.0.4",
-    "vue-router": "^4.0.0-rc.6",
+    "axios": "^0.21.1",
+    "fuse.js": "^6.4.6",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.3",
     "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vitejs/plugin-vue": "^1.1.2",
+    "@vue/compiler-sfc": "^3.0.5",
+    "@vuedx/typecheck": "^0.6.0",
+    "@vuedx/typescript-plugin-vue": "^0.6.0",
+    "autoprefixer": "^10.2.3",
+    "postcss": "^8.2.4",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3",
+    "vite": "^2.0.0-beta.50"
   }
 }
